ingress.staging.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-admin
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - admin.staging.mik.kode-t.ru
      secretName: front-admin-tls
  rules:
    - host: admin.staging.mik.kode-t.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: front-admin
              servicePort: 80
